--- a/ui/package.json
+++ b/ui/package.json
@@ -8,11 +8,12 @@
     "@material-ui/icons": "^4.11.2",
     "@mui/icons-material": "^5.2.0",
     "@mui/material": "^5.2.2",
+    "@mui/x-data-grid": "^5.1.0",
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "react": "16.12.0",
-    "react-dom": "16.12.0",
+    "react": "latest",
+    "react-dom": "latest",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
