--- a/ui/package.json
+++ b/ui/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.7.0",
     "@emotion/styled": "^11.6.0",
-    "@material-ui/core": "^4.12.3",
+    "@material-ui/core": "4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@mui/icons-material": "^5.2.0",
     "@mui/material": "^5.2.2",
@@ -14,6 +15,7 @@
     "@testing-library/user-event": "^12.8.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-phone-input-mui": "^2.9.4",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
