--- a/ui/package.json
+++ b/ui/package.json
@@ -13,6 +13,7 @@
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "material-ui-dropzone": "^3.5.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-phone-input-mui": "^2.9.4",
