--- a/ui/package.json
+++ b/ui/package.json
@@ -17,6 +17,7 @@
     "material-ui-dropzone": "^3.5.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-fetch-hook": "^1.8.5",
     "react-phone-input-mui": "^2.9.4",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
