--- a/ui/package.json
+++ b/ui/package.json
@@ -21,6 +21,9 @@
     "react-phone-input-mui": "^2.9.4",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
