--- a/ui/package.json
+++ b/ui/package.json
@@ -16,14 +16,17 @@
     "axios": "^0.24.0",
     "material-ui-dropzone": "^3.5.0",
     "react": "17.0.2",
+    "react-awesome-slider": "^4.1.0",
     "react-dom": "17.0.2",
     "react-fetch-hook": "^1.8.5",
+    "react-material-ui-carousel": "^3.1.1",
     "react-phone-input-mui": "^2.9.4",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
+    "sass": "^1.45.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
