--- a/service/src/main/resources/application.properties
+++ b/service/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.sql.init.mode=always
 server.error.include-message=always
+
+upload.path=D:/Projects/addvertisement-web-app/service/src/main/resources/images
