--- a/ui/package.json
+++ b/ui/package.json
@@ -28,6 +28,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
     "sass": "^1.45.0",
+    "uniqid": "^5.4.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
