--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
 version: '3'
 
 services:
-  # frontend:
-
-  #   null
-
+  frontend:
+    build: ./ui
+    ports:
+      - "3000:3000"
 
   backend:
     build: ./service
@@ -25,16 +25,6 @@ services:
       POSTGRES_DB: advertisement_db
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
-    # ports:
-    #   - "5432:5432"
-    # pgadmin:
-    #   image: dpage/pgadmin4
-    #   restart: unless-stopped
-    #   environment:
-    #     PGADMIN_DEFAULT_EMAIL: service@service.com
-    #     PGADMIN_DEFAULT_PASSWORD: postgres
-    #     PGADMIN_LISTEN_PORT: 5050
-    #   network_mode: service:db
 
 volumes:
   postgres-data: null
