--- a/ui/package.json
+++ b/ui/package.json
@@ -14,6 +14,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
+    "form-data": "^4.0.0",
     "material-ui-dropzone": "^3.5.0",
     "react": "17.0.2",
     "react-awesome-slider": "^4.1.0",
