--- a/service/src/main/resources/application.properties
+++ b/service/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.sql.init.mode=always
 server.error.include-message=always
+spring.servlet.multipart.max-file-size=3MB
