--- a/ui/package.json
+++ b/ui/package.json
@@ -30,7 +30,9 @@
     "redux-thunk": "^2.4.1",
     "sass": "^1.45.0",
     "uniqid": "^5.4.0",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.6",
+    "enzyme": "^3.11.0"
   },
   "scripts": {
     "start": "react-scripts start",
