--- a/ui/package.json
+++ b/ui/package.json
@@ -61,5 +61,8 @@
   },
   "devDependencies": {
     "jest": "^26.6.0"
+  },
+  "jest": {
+    "setupFilesAfterEnv": ["<rootDir>/src/setupTests.js"]
   }
 }
