--- a/ui/package.json
+++ b/ui/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.24.0",
     "enzyme": "^3.11.0",
     "form-data": "^4.0.0",
+    "identity-obj-proxy": "^3.0.0",
     "material-ui-dropzone": "^3.5.0",
     "react": "17.0.2",
     "react-awesome-slider": "^4.1.0",
@@ -41,7 +42,8 @@
     "test:o": "jest -o",
     "test:coverage": "jest --coverage",
     "test:coverage-all": "jest --coverage --collectCoverageFrom=src/**/*.js",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "test:custom": "jest --transformIgnorePatterns \"node_modules/(?!@amcharts)/\""
   },
   "eslintConfig": {
     "extends": [
@@ -65,6 +67,7 @@
     "@babel/plugin-transform-modules-commonjs": "^7.17.7",
     "@babel/preset-env": "^7.16.11",
     "babel-jest": "^27.5.1",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "jest": "^26.6.3"
   }
 }
