unit tests for personal area

--- a/ui/package.json
+++ b/ui/package.json
@@ -42,7 +42,8 @@
     "test": "jest --transformIgnorePatterns \"node_modules/(?!@amcharts)/\"",
     "test:coverage-all": "jest --silent --collectCoverageFrom=src/**/*.js --transformIgnorePatterns \"node_modules/(?!@amcharts)/\"",
     "eject": "react-scripts eject",
-    "test:custom": "jest -o --transformIgnorePatterns \"node_modules/(?!@amcharts)/\""
+    "test:o": "jest -o --transformIgnorePatterns \"node_modules/(?!@amcharts)/\"",
+    "test:o:coverage": "jest -o --coverage --transformIgnorePatterns \"node_modules/(?!@amcharts)/\""
   },
   "eslintConfig": {
     "extends": [
