--- a/ui/package.json
+++ b/ui/package.json
@@ -17,8 +17,8 @@
     "axios": "^0.24.0",
     "enzyme": "^3.11.0",
     "form-data": "^4.0.0",
-    "identity-obj-proxy": "^3.0.0",
     "history": "^5.3.0",
+    "identity-obj-proxy": "^3.0.0",
     "material-ui-dropzone": "^3.5.0",
     "react": "17.0.2",
     "react-awesome-slider": "^4.1.0",
@@ -39,11 +39,11 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "jest --transformIgnorePatterns \"node_modules/(?!@amcharts)/\"",
-    "test:coverage-all": "jest --silent --collectCoverageFrom=src/*/*.js --transformIgnorePatterns \"node_modules/(?!@amcharts)/\"",
-    "eject": "react-scripts eject",
-    "test:o": "jest -o --transformIgnorePatterns \"node_modules/(?!@amcharts)/\"",
-    "test:o:coverage": "jest -o --coverage --transformIgnorePatterns \"node_modules/(?!@amcharts)/\""
+    "test:unit": "jest --group=unit --silent --transformIgnorePatterns \"node_modules/(?!@amcharts)/\"",
+    "test:unit:o": "jest -o --group=unit --transformIgnorePatterns \"node_modules/(?!@amcharts)/\"",
+    "test:unit:coverage-all": "jest --group=unit --silent --collectCoverageFrom=src/*/*.js --transformIgnorePatterns \"node_modules/(?!@amcharts)/\"",
+    "test:integration": "jest --group=integration --collectCoverage=false --silent --transformIgnorePatterns \"node_modules/(?!@amcharts)/\"",
+    "test:integration:o": "jest -o --group=integration --collectCoverage=false --transformIgnorePatterns \"node_modules/(?!@amcharts)/\""
   },
   "eslintConfig": {
     "extends": [
@@ -68,6 +68,7 @@
     "@babel/preset-env": "^7.16.11",
     "babel-jest": "^27.5.1",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
-    "jest": "^26.6.3"
+    "jest": "^26.6.3",
+    "jest-runner-groups": "^2.1.0"
   }
 }
