--- a/ui/package.json
+++ b/ui/package.json
@@ -25,7 +25,7 @@
     "react-dom": "17.0.2",
     "react-fetch-hook": "^1.8.5",
     "react-material-ui-carousel": "^3.1.1",
-    "react-phone-input-mui": "^2.9.4",
+    "react-phone-input-2": "*",
     "react-redux": "^7.2.6",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
@@ -66,9 +66,7 @@
   "devDependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.17.7",
     "@babel/preset-env": "^7.16.11",
-    "babel-jest": "^27.5.1",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
-    "jest": "^26.6.3",
     "jest-runner-groups": "^2.1.0"
   }
 }
