--- a/ui/package.json
+++ b/ui/package.json
@@ -25,7 +25,7 @@
     "react-dom": "17.0.2",
     "react-fetch-hook": "^1.8.5",
     "react-material-ui-carousel": "^3.1.1",
-    "react-phone-input-2": "*",
+    "react-phone-input-mui": "^2.9.4",
     "react-redux": "^7.2.6",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
