add first e2e test

--- a/service/pom.xml
+++ b/service/pom.xml
@@ -89,6 +89,11 @@
             <artifactId>mapstruct</artifactId>
             <version>${org.mapstruct.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.microsoft.playwright</groupId>
+            <artifactId>playwright</artifactId>
+            <version>1.20.0</version>
+        </dependency>
     </dependencies>
 
     <build>
